--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.2
-Flask-Cors==3.0.9
+Flask-Cors==4.0.1
 rdflib==6.0.2
 SPARQLWrapper==1.8.4
 wlighter==1.0.1
 plantuml==0.3.0
+python-xz==0.5.0
